deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mind-nav
  labels:
    app.kubernetes.io/part-of: mind-nav
